--- a/software-project-main/.github/workflows/ci.yml
+++ b/software-project-main/.github/workflows/ci.yml
@@ -26,55 +26,42 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    
-    - name: Create test database properties
-      run: |
-        mkdir -p src/main/resources
-        cat > src/main/resources/db.properties << EOF
-        db.url=jdbc:postgresql://localhost:5432/library_test
-        db.username=postgres
-        db.password=postgres
-        db.driver=org.postgresql.Driver
-        EOF
-    
-    - name: Initialize database schema
-      run: |
-        PGPASSWORD=postgres psql -h localhost -U postgres -d library_test -f src/test/resources/schema.sql
-    
-    - name: Build with Maven
-      run: mvn -B clean compile
-    
-    - name: Run all tests (unit + integration)
-      run: mvn -B test
-    
-    - name: Generate coverage report
-      run: mvn -B jacoco:report
-    
-    - name: Upload coverage to Codecov (optional)
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./target/site/jacoco/jacoco.xml
-        fail_ci_if_error: false
-      continue-on-error: true
-    
-    - name: Archive test results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: target/surefire-reports/
-    
-    - name: Archive coverage report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: target/site/jacoco/
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Create database properties
+        run: |
+          mkdir -p src/main/resources
+          cat > src/main/resources/db.properties << EOF
+          db.url=jdbc:postgresql://localhost:5432/library_test
+          db.username=postgres
+          db.password=postgres
+          db.driver=org.postgresql.Driver
+          EOF
+
+      - name: Initialize database schema
+        run: |
+          PGPASSWORD=postgres psql -h localhost -U postgres -d library_test -f src/test/resources/schema.sql
+
+      - name: Run tests with coverage
+        run: mvn -B clean verify
+
+      - name: Archive test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: target/surefire-reports/
+
+      - name: Archive coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: target/site/jacoco/
