--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <execution>
+                    <!-- execution>
                         <id>jacoco-check</id>
                         <phase>test</phase>
                         <goals>
@@ -155,7 +155,7 @@
                                 </rule>
                             </rules>
                         </configuration>
-                    </execution>
+                    </execution -->
                 </executions>
             </plugin>
 
