--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -44,3 +44,10 @@ jobs:
         file: target/site/jacoco/jacoco.xml
         flags: unittests
         name: codecov-umbrella
+    
+    - name: Upload JaCoCo HTML report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: jacoco-report
+        path: target/site/jacoco/
