Add SonarCloud organization to configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-# SonarQube Project Properties
+# SonarCloud Project Properties
+sonar.organization=saifdinho
 sonar.projectKey=LibrarySystem
 sonar.projectName=Library Management System
 sonar.projectVersion=1.0-SNAPSHOT
