--- a/pom.xml
+++ b/pom.xml
@@ -201,4 +201,10 @@
             </plugin>
         </plugins>
     </build>
+    
+    <properties>
+        <sonar.organization>saifdinho</sonar.organization>
+        <sonar.projectKey>saif-ahmad_software</sonar.projectKey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 </project>
