--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -33,7 +33,7 @@ jobs:
     
     - name: SonarQube Scan
       if: env.SONAR_TOKEN != null && env.SONAR_HOST_URL != null
-      run: mvn sonar:sonar -Dsonar.projectKey=saifdinho_library-management-system
+      run: mvn sonar:sonar
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
