Fix all SonarCloud configuration issues
- Use correct project key: SaifDinho_saif-ahmad_software
- Remove deprecated sonar.java.coveragePlugin
- Change to sonar.coverage.exclusions
- Clean up sonar-project.properties
- Should now show coverage properly

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarCloud Project Properties
 sonar.organization=saifdinho
-sonar.projectKey=saif-ahmad_software
+sonar.projectKey=SaifDinho_saif-ahmad_software
 sonar.projectName=Library Management System
 sonar.projectVersion=1.0-SNAPSHOT
 
@@ -10,18 +10,14 @@ sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
 
-# JaCoCo coverage
+# JaCoCo coverage (THIS is what matters)
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-sonar.java.coveragePlugin=jacoco
 
-# Exclusions (same as your JaCoCo config)
-sonar.exclusions=\
+# Coverage exclusions (match JaCoCo)
+sonar.coverage.exclusions=\
   **/ui/**,\
   **/repository/**,\
   **/ReservationFeatureTest.java
-
-# Quality Gates
-sonar.qualitygate.wait=true
 
 # Encoding
 sonar.sourceEncoding=UTF-8
